src/component/form/snapshots/envision__component__form__snapshot_tests__snapshot_default_empty.snap
---
source: src/component/form/snapshot_tests.rs
assertion_line: 25
expression: terminal.backend().to_string()
---

