src/component/form/snapshots/envision__component__form__snapshot_tests__snapshot_focused_checkbox.snap
---
source: src/component/form/snapshot_tests.rs
assertion_line: 72
expression: terminal.backend().to_string()
---
┌ Name ────────────────────────────────────────────────────┐
│                                                          │
└──────────────────────────────────────────────────────────┘
[ ] I agree                                                 
┌ Color ───────────────────────────────────────────────────┐
│Select...                                                 │
└──────────────────────────────────────────────────────────┘
