src/component/form/snapshots/envision__component__form__snapshot_tests__snapshot_populated.snap
---
source: src/component/form/snapshot_tests.rs
assertion_line: 45
expression: terminal.backend().to_string()
---
┌ Name ────────────────────────────────────────────────────┐
│Joe                                                       │
└──────────────────────────────────────────────────────────┘
[x] I agree                                                 
┌ Color ───────────────────────────────────────────────────┐
│Select...                                                 │
└──────────────────────────────────────────────────────────┘
