src/component/form/snapshots/envision__component__form__snapshot_tests__snapshot_unfocused.snap
---
source: src/component/form/snapshot_tests.rs
assertion_line: 99
expression: terminal.backend().to_string()
---
┌ Name ────────────────────────────────────────────────────┐
│                                                          │
└──────────────────────────────────────────────────────────┘
[ ] I agree                                                 
┌ Color ───────────────────────────────────────────────────┐
│Select...                                                 │
└──────────────────────────────────────────────────────────┘
