src/component/form/snapshots/envision__component__form__snapshot_tests__snapshot_with_placeholder.snap
---
source: src/component/form/snapshot_tests.rs
assertion_line: 114
expression: terminal.backend().to_string()
---
┌ Email ───────────────────────────────────────────────────┐
│user@example.com                                          │
└──────────────────────────────────────────────────────────┘
┌ Name ────────────────────────────────────────────────────┐
│                                                          │
└──────────────────────────────────────────────────────────┘
